# dev-blackbox

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  TODO.md  create_admin_user.py  main.py  pyproject.toml
.claude/agents/blackbox-code-review/: agent.md
.claude/skills/: create-table.md
.claude/skills/create-repository-test/: SKILL.md
.claude/skills/create-service-test/: SKILL.md
.claude/skills/create-table/: SKILL.md
.claude/skills/create-task-test/: SKILL.md
.claude/skills/create-test/: SKILL.md
.github/: dependabot.yaml
.github/workflows/: ci.yml  coverage.yml
dev_blackbox/: datetime_util.py
dev_blackbox/agent/: llm_agent.py
dev_blackbox/agent/model/: llm_model.py  prompt.py
dev_blackbox/client/: github_client.py  jira_client.py  slack_client.py
dev_blackbox/client/model/: github_api_model.py  github_model.py  jira_api_model.py  jira_model.py  slack_api_model.py
dev_blackbox/controller/: exception_handler.py  github_collect_controller.py  github_event_controller.py  github_user_secret_controller.py  health_controller.py  home_contoller.py  home_controller.py  jira_user_controller.py  security_config.py  slack_user_controller.py  user_controller.py  work_log_controller.py
dev_blackbox/controller/admin/: admin_jira_secret_controller.py  admin_slack_secret_controller.py  admin_user_controller.py
dev_blackbox/controller/api/: auth_controller.py  github_event_controller.py  github_user_secret_controller.py  jira_secret_controller.py  jira_user_controller.py  slack_secret_controller.py  slack_user_controller.py  user_controller.py  work_log_controller.py
dev_blackbox/controller/config/: exception_handler.py  security_config.py
dev_blackbox/controller/dto/: common_dto.py  github_collect_dto.py  github_event_dto.py  github_user_secret_dto.py  slack_user_dto.py  user_dto.py  work_log_dto.py
dev_blackbox/core/: background_scheduler.py  cache.py  config.py  const.py  database.py  encrypt.py  enum.py  exception.py  jwt_handler.py  logging.py  middleware.py  password.py  types.py
dev_blackbox/service/: github_collect_service.py  github_event_service.py  github_user_secret_service.py  jira_event_service.py  jira_secret_service.py  jira_user_service.py  slack_message_service.py  slack_secret_service.py  slack_user_service.py  summary_service.py  user_service.py  work_log_service.py
dev_blackbox/service/command/: github_user_secret_command.py  jira_secret_command.py  slack_secret_command.py  user_command.py
dev_blackbox/service/model/: github_user_secret_model.py  jira_user_model.py  platform_work_log_model.py  slack_user_model.py  user_model.py
dev_blackbox/service/query/: github_event_query.py  jira_event_query.py  slack_message_query.py  user_query.py
dev_blackbox/task/: background_scheduler.py  collect_task.py  default_task.py  health_task.py  jira_task.py  slack_task.py
dev_blackbox/task/context/: user_context.py
dev_blackbox/util/: datetime_util.py  distributed_lock.py  idempotent_request.py  mask_util.py
docker/: docker-compose.yaml
docker/postgres/: init.sql  postgresql.conf
docs/: API.md  ARCHITECTURE.md  CONVENTIONS.md  DATABASE.md  ERD.md  INFRASTRUCTURE.md  PIPELINE.md  TEST.md
tests/: conftest.py
tests/controller/: conftest.py  health_controller_test.py  home_controller_test.py
tests/core/: cache_test.py  encrypt_test.py
tests/fixtures/: github_fixture.py  jira_fixture.py  lock_helper.py  user_context_helper.py
tests/service/: github_event_service_test.py  github_user_secret_service_test.py  jira_event_service_test.py  jira_secret_service_test.py  jira_user_service_test.py  slack_message_service_test.py  slack_secret_service_test.py  slack_user_service_test.py  user_service_test.py  work_log_service_test.py
tests/task/: health_task_test.py  jira_task_test.py  slack_task_test.py
tests/util/: datetime_util_test.py  distributed_lock_test.py  idempotent_request_test.py  mask_util_test.py
(+53 files in other folders)
