[project]
name = "dev-blackbox"
version = "0.1.0"
description = ""
authors = [
    { name = "Raynor", email = "jonggu.woo@fitpet.co.kr" }
]
requires-python = ">=3.14,<4.0.0"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "llama-index-core (>=0.14.14,<0.15.0)",
    "llama-index-llms-ollama (>=0.9.1,<0.10.0)",
    "llama-index-embeddings-ollama (>=0.8.6,<0.9.0)",
    "fastapi (>=0.128.8,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "cryptography (>=46.0.5,<47.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "redis (>=7.1.1,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
]

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "pyright (>=1.1.408,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py314']

[tool.pytest.ini_options]
testpaths = ['tests']
pythonpath = ['.']

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
